15/02/2024 Update (Login and Sign in System)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/Maps/M_World.M_World
+EditorStartupMap=/Game/Maps/M_World.M_World
 GlobalDefaultGameMode=/Game/BP_GM.BP_GM_C
-ServerDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+ServerDefaultMap=/Game/Maps/M_World.M_World
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
